--- a/src/BulkRename/Resources/SharedResource.de.resx
+++ b/src/BulkRename/Resources/SharedResource.de.resx
@@ -169,6 +169,6 @@ setzen und die Anwendung neu starten.</value>
     <value>Wenn Sie in die &lt;strong&gt;Entwicklungsumgebung&lt;/strong&gt; wechseln, werden detailliertere Informationen über den aufgetretenen Fehler angezeigt.</value>
   </data>
   <data name="WelcomeToBulkRename" xml:space="preserve">
-    <value>Willkommen bei Bulkrename!</value>
+    <value>Willkommen bei BulkRename!</value>
   </data>
 </root>
