--- a/src/BulkRename/Resources/SharedResource.resx
+++ b/src/BulkRename/Resources/SharedResource.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="About" xml:space="preserve">
+    <value>About</value>
+  </data>
   <data name="AnErrorOccuredHeader" xml:space="preserve">
     <value>An error occurred while processing your request.</value>
   </data>
